--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,60 +1,17 @@
-#pic{
-    height: 140px;
+body,html{
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
 }
-
-#person{
-    height: 40px;
-    float: right;
-    margin: 20px;
-    cursor: pointer;
-}
-#mail{
-    height: 40px;
-    float: right;
-    margin: 20px;
-    cursor: pointer;
-}
-#help{
-    height: 40px;
-    float: right;
-    margin: 20px;
-    cursor: pointer;
-}
-.profile{
+.wrapper{
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
     display: flex;
 }
-.sidebar{
-    margin-top: -18%;
-    margin-left: 1200px;
-    float: right;
-    display: block;
-    /* border-left: 2px solid black;
-    border-width: 100%; */
-}
-.foot{
-    border-top: 2px solid blue;
-    display: flex;
-}
-.info{
-    margin: 20px;
-    flex: 1;
-}
-.cont{
-    margin: 20px;
-    float: right;
-    flex: 1;
-}
-.cont a{
-    text-decoration: none;
-}
-.fab a :hover{
-    color: blue;
-}
-.info p{
-    font-size: 18px;
-}
-.fab{
-    font-size: 25px;
-    margin: 8px;
-    color: black;
+.instruction-content{
+    height: 90%;
+    width: 100%;
 }
