organised, and changed the layout

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,17 @@ body,html{
     display: flex;
 }
 .instruction-content{
-    height: 90%;
-    width: 100%;
+    height: 100%;
+    width: 60%;
+}
+.instructions{
+    justify-self: center;
+    width: 40%; 
+    height: 100%; 
+    text-align: center;
+}
+.container-main{
+    height: auto; 
+    width: 60vw; 
+    flex-flow: column !important;
 }
