--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@ body,html{
     margin: 0;
     height: 100%;
     width: 100%;
+    background-color: #a1e6bc!important;
 }
 .wrapper{
     height: 100%;
@@ -14,15 +15,20 @@ body,html{
 .instruction-content{
     height: 100%;
     width: 60%;
+    
+    
 }
 .instructions{
     justify-self: center;
     width: 40%; 
-    height: 100%; 
+    height: 400%; 
     text-align: center;
+    background-color: #d8e7bd;
 }
 .container-main{
     height: auto; 
     width: 60vw; 
-    flex-flow: column !important;
+    
+    box-shadow: 5px 5px 5px 1px rgb(50, 119, 10);
+    background-color: #d8e7bd!important;
 }
